fix dark mode color for privacy policy checkbox

--- a/frontend/stylesheets/main.less
+++ b/frontend/stylesheets/main.less
@@ -647,5 +647,9 @@ i.without-icon-margin,
       background-repeat: no-repeat;
       background-size: cover;
     }
+
+    .ant-checkbox + span {
+      color: @black;
+    }
   }
 }
